--- a/chrome/css/edge-frfox/global/popup.css
+++ b/chrome/css/edge-frfox/global/popup.css
@@ -691,6 +691,7 @@ panelview .toolbarbutton-1,
 
   menulist > menupopup > menuitem:is([checked="true"], [selected="true"])::before,
   menupopup > menuitem::before,
+  menupopup > menu::before,
   menupopup > menuitem::after {
     display: none !important;
   }
