--- a/chrome/css/edge-frfox/tweaks/hide-tabs-bar.css
+++ b/chrome/css/edge-frfox/tweaks/hide-tabs-bar.css
@@ -180,7 +180,7 @@
 
     & #sidebar-header {
       border-bottom: 0 !important;
-      padding: 10px 4px 0 !important;
+      padding: 2px !important;
       overflow: hidden;
       position: relative;
 
