--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -24,5 +24,5 @@
 @import url(./css/menu.css);
 /*@import url(./css/popup.css);*/
 @import url(./css/sidebar.css);
-/*@import url(./css/tabbar.css);*/
+@import url(./css/tabbar.css);
 @import url(./css/bookmark.css);
